--- a/john_about_stylesheet.css
+++ b/john_about_stylesheet.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'EB Garamond', Garamond, Georgia, serif;
+    font-family: 'Inter', Garamond, Georgia, serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
@@ -79,26 +79,25 @@ main {
 }
 
 footer {
-    display: flex;
-    justify-content: space-between;
     padding-top: 20px;
     border-top: 1px solid #e0e0e0;
 }
 
 .social-links {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .social-links a {
-    margin-bottom: 5px;
     color: #0066cc;
     text-decoration: none;
+    margin: 0 15px 10px;
+    text-align: center;
 }
 
 .social-links i {
     color: #808080;
-    width: 20px;
     margin-right: 5px;
 }
 
